--- a/index.html
+++ b/index.html
@@ -4,10 +4,87 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Document</title>
+        <title>Site Smile</title>
         <!-- css -->
         <link rel="stylesheet" href="./assets/css/reset.css" />
         <link rel="stylesheet" href="./assets/css/style.css" />
+        <!-- fav-icon -->
+        <link
+            rel="apple-touch-icon"
+            sizes="57x57"
+            href="./assets/favicon.ico/apple-icon-57x57.png"
+        />
+        <link
+            rel="apple-touch-icon"
+            sizes="60x60"
+            href="./assets/favicon.ico/apple-icon-60x60.png"
+        />
+        <link
+            rel="apple-touch-icon"
+            sizes="72x72"
+            href="./assets/favicon.ico/apple-icon-72x72.png"
+        />
+        <link
+            rel="apple-touch-icon"
+            sizes="76x76"
+            href="./assets/favicon.ico/apple-icon-76x76.png"
+        />
+        <link
+            rel="apple-touch-icon"
+            sizes="114x114"
+            href="./assets/favicon.ico/apple-icon-114x114.png"
+        />
+        <link
+            rel="apple-touch-icon"
+            sizes="120x120"
+            href="./assets/favicon.ico/apple-icon-120x120.png"
+        />
+        <link
+            rel="apple-touch-icon"
+            sizes="144x144"
+            href="./assets/favicon.ico/apple-icon-144x144.png"
+        />
+        <link
+            rel="apple-touch-icon"
+            sizes="152x152"
+            href="./assets/favicon.ico/apple-icon-152x152.png"
+        />
+        <link
+            rel="apple-touch-icon"
+            sizes="180x180"
+            href="./assets/favicon.ico/apple-icon-180x180.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="192x192"
+            href="./assets/favicon.ico/android-icon-192x192.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="32x32"
+            href="./assets/favicon.ico/f-32x32.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="96x96"
+            href="./assets/favicon.ico/f-96x96.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="16x16"
+            href="./assets/favicon.ico/f-16x16.png"
+        />
+        <link rel="manifest" href="./assets/favicon.ico/manifest.json" />
+        <meta name="msapplication-TileColor" content="#ffffff" />
+        <meta
+            name="msapplication-TileImage"
+            content="./assets/favicon.ico/ms-icon-144x144.png"
+        />
+        <meta name="theme-color" content="#ffffff" />
         <!-- font-embeded -->
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -17,6 +94,33 @@
         />
     </head>
     <body>
-        <h1>hello world</h1>
+        <div class="header">
+            <div class="content">
+                <a href="#"
+                    ><img
+                        src="./assets/icons/logo.svg"
+                        alt=""
+                        class="header__logo"
+                /></a>
+                <ul class="header__navbar">
+                    <li>
+                        <a href="#" class="header__navbar--link">Home</a>
+                    </li>
+                    <li>
+                        <a href="#!" class="header__navbar--link">Services</a>
+                    </li>
+                    <li>
+                        <a href="#!" class="header__navbar--link">About</a>
+                    </li>
+                    <li>
+                        <a href="#!" class="header__navbar--link">Doctors</a>
+                    </li>
+                </ul>
+                <div class="header__actions">
+                    <a href="" class="header__actions--login"></a>
+                    <a href="" class="header__actions--login"></a>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
