--- a/index.html
+++ b/index.html
@@ -562,15 +562,15 @@
                 <section class="footer__column">
                     <h3 class="footer__column--title">Stay In Touch</h3>
                     <section class="footer__media">
-                        <div class="footer__media--logo">
+                        <a href="#!" class="footer__media--logo">
                             <i class="fa-brands fa-facebook-f"></i>
-                        </div>
-                        <div class="footer__media--logo">
+                        </a>
+                        <a href="#!" class="footer__media--logo">
                             <i class="fa-brands fa-twitter"></i>
-                        </div>
-                        <div class="footer__media--logo">
+                        </a>
+                        <a href="#!" class="footer__media--logo">
                             <i class="fa-brands fa-linkedin-in"></i>
-                        </div>
+                        </a>
                     </section>
                     <section class="footer__subscribe">
                         <h3 class="footer__column--title">Subscribe</h3>
